Removed color_bg.xml as it was unues. Added close() method to the search method in DatabaseHandler class to release resourses